--- a/MasterThesis/RePair/RePair.vcxproj.filters
+++ b/MasterThesis/RePair/RePair.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="test.h">
+    <ClInclude Include="MyTimer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,7 +35,7 @@
     <ClCompile Include="RePair.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="MyTimer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
