--- a/MasterThesis/RePair/RePair.vcxproj
+++ b/MasterThesis/RePair/RePair.vcxproj
@@ -80,16 +80,20 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyTimer.h" />
+    <ClInclude Include="PairRecord.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="SymbolRecord.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyTimer.cpp" />
+    <ClCompile Include="PairRecord.cpp" />
     <ClCompile Include="RePair.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SymbolRecord.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
