--- a/MasterThesis/RePair/RePair.vcxproj.filters
+++ b/MasterThesis/RePair/RePair.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="PairRecord.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Initializer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PairRecord.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Initializer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
