Added a ton of unit tests for debugging. Moved a lot of code around into smaller methods to be easier to test. Still bugs.

--- a/MasterThesis/unittest_RePair/unittest_RePair.vcxproj
+++ b/MasterThesis/unittest_RePair/unittest_RePair.vcxproj
@@ -82,10 +82,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\RePair\AlgorithmP.cpp" />
     <ClCompile Include="..\RePair\Initializer.cpp" />
     <ClCompile Include="..\RePair\MyTimer.cpp" />
     <ClCompile Include="..\RePair\PairRecord.cpp" />
     <ClCompile Include="..\RePair\SymbolRecord.cpp" />
+    <ClCompile Include="unittest_AlgorithmP.cpp" />
     <ClCompile Include="unittest_Initializer.cpp" />
     <ClCompile Include="unittest_MyTimer.cpp" />
   </ItemGroup>
@@ -98,6 +100,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\RePair\AlgorithmP.h" />
     <ClInclude Include="..\RePair\Initializer.h" />
     <ClInclude Include="..\RePair\MyTimer.h" />
     <ClInclude Include="..\RePair\PairRecord.h" />
