--- a/MasterThesis/unittest_RePair/unittest_RePair.vcxproj.filters
+++ b/MasterThesis/unittest_RePair/unittest_RePair.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="..\RePair\PairRecord.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="unittest_AlgorithmP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\RePair\AlgorithmP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\RePair\MyTimer.h">
@@ -48,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\RePair\PairRecord.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\RePair\AlgorithmP.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
