--- a/MasterThesis/RePair/RePair.vcxproj
+++ b/MasterThesis/RePair/RePair.vcxproj
@@ -79,6 +79,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AlgorithmP.h" />
     <ClInclude Include="Initializer.h" />
     <ClInclude Include="MyTimer.h" />
     <ClInclude Include="PairRecord.h" />
@@ -87,6 +88,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AlgorithmP.cpp" />
     <ClCompile Include="Initializer.cpp" />
     <ClCompile Include="MyTimer.cpp" />
     <ClCompile Include="PairRecord.cpp" />
