--- a/MasterThesis/unittest_RePair/unittest_RePair.vcxproj
+++ b/MasterThesis/unittest_RePair/unittest_RePair.vcxproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <ClCompile Include="..\RePair\AlgorithmP.cpp" />
     <ClCompile Include="..\RePair\Initializer.cpp" />
+    <ClCompile Include="..\RePair\MyTest.cpp" />
     <ClCompile Include="..\RePair\MyTimer.cpp" />
     <ClCompile Include="..\RePair\PairRecord.cpp" />
     <ClCompile Include="..\RePair\SymbolRecord.cpp" />
@@ -102,6 +103,7 @@
   <ItemGroup>
     <ClInclude Include="..\RePair\AlgorithmP.h" />
     <ClInclude Include="..\RePair\Initializer.h" />
+    <ClInclude Include="..\RePair\MyTest.h" />
     <ClInclude Include="..\RePair\MyTimer.h" />
     <ClInclude Include="..\RePair\PairRecord.h" />
     <ClInclude Include="..\RePair\SymbolRecord.h" />
