--- a/MasterThesis/unittest_RePair/unittest_RePair.vcxproj.filters
+++ b/MasterThesis/unittest_RePair/unittest_RePair.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\RePair\AlgorithmP.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\RePair\MyTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\RePair\MyTimer.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\RePair\AlgorithmP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\RePair\MyTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
