--- a/MasterThesis/RePair/RePair.vcxproj
+++ b/MasterThesis/RePair/RePair.vcxproj
@@ -86,7 +86,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SymbolRecord.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="Test.h" />
+    <ClInclude Include="MyTest.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AlgorithmP.cpp" />
@@ -99,7 +99,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="SymbolRecord.cpp" />
-    <ClCompile Include="Test.cpp" />
+    <ClCompile Include="MyTest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
