--- a/MasterThesis/RePair/RePair.vcxproj.filters
+++ b/MasterThesis/RePair/RePair.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="MyTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Outputter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MyTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Outputter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
