Realized strings compress chars, must switch to char arrays....

--- a/MasterThesis/unittest_RePair/unittest_RePair.vcxproj
+++ b/MasterThesis/unittest_RePair/unittest_RePair.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="..\RePair\Initializer.cpp" />
     <ClCompile Include="..\RePair\MyTest.cpp" />
     <ClCompile Include="..\RePair\MyTimer.cpp" />
+    <ClCompile Include="..\RePair\Outputter.cpp" />
     <ClCompile Include="..\RePair\PairRecord.cpp" />
     <ClCompile Include="..\RePair\SymbolRecord.cpp" />
     <ClCompile Include="unittest_AlgorithmP.cpp" />
@@ -105,6 +106,7 @@
     <ClInclude Include="..\RePair\Initializer.h" />
     <ClInclude Include="..\RePair\MyTest.h" />
     <ClInclude Include="..\RePair\MyTimer.h" />
+    <ClInclude Include="..\RePair\Outputter.h" />
     <ClInclude Include="..\RePair\PairRecord.h" />
     <ClInclude Include="..\RePair\SymbolRecord.h" />
   </ItemGroup>
