Now correctly handles multiple line breaks and other character of that type. Still unknown problem on large files.

--- a/MasterThesis/RePair/RePair.vcxproj.filters
+++ b/MasterThesis/RePair/RePair.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Outputter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Pair.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Outputter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Pair.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
