--- a/MasterThesis/RePair/RePair.vcxproj
+++ b/MasterThesis/RePair/RePair.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="Initializer.h" />
     <ClInclude Include="MyTimer.h" />
     <ClInclude Include="Outputter.h" />
+    <ClInclude Include="Pair.h" />
     <ClInclude Include="PairRecord.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SymbolRecord.h" />
@@ -94,6 +95,7 @@
     <ClCompile Include="Initializer.cpp" />
     <ClCompile Include="MyTimer.cpp" />
     <ClCompile Include="Outputter.cpp" />
+    <ClCompile Include="Pair.cpp" />
     <ClCompile Include="PairRecord.cpp" />
     <ClCompile Include="RePair.cpp" />
     <ClCompile Include="stdafx.cpp">
