Working again with proper empty symbol threading. All test files pass, but running out of symbols on proper files. Need to convert from char to int symbols.

--- a/MasterThesis/unittest_RePair/unittest_RePair.vcxproj
+++ b/MasterThesis/unittest_RePair/unittest_RePair.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="..\RePair\Outputter.cpp" />
     <ClCompile Include="..\RePair\Pair.cpp" />
     <ClCompile Include="..\RePair\PairRecord.cpp" />
+    <ClCompile Include="..\RePair\PairTracker.cpp" />
     <ClCompile Include="..\RePair\SymbolRecord.cpp" />
     <ClCompile Include="unittest_AlgorithmP.cpp" />
     <ClCompile Include="unittest_Initializer.cpp" />
@@ -110,6 +111,7 @@
     <ClInclude Include="..\RePair\Outputter.h" />
     <ClInclude Include="..\RePair\Pair.h" />
     <ClInclude Include="..\RePair\PairRecord.h" />
+    <ClInclude Include="..\RePair\PairTracker.h" />
     <ClInclude Include="..\RePair\SymbolRecord.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
