--- a/MasterThesis/googletest/googletest.vcxproj
+++ b/MasterThesis/googletest/googletest.vcxproj
@@ -19,13 +19,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>Intel C++ Compiler XE 15.0</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>Intel C++ Compiler XE 15.0</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -40,7 +40,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>D:\Documents\Programming Projects\Googletest\gtest-1.7.0\include;D:\Documents\Programming Projects\Googletest\gtest-1.7.0;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Nicolai\Documents\Programming Projects\Googletest\gtest-1.7.0\include;C:\Users\Nicolai\Documents\Programming Projects\Googletest\gtest-1.7.0;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -78,8 +78,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Documents\Programming Projects\Googletest\gtest-1.7.0\src\gtest-all.cc" />
-    <ClCompile Include="..\..\..\..\Documents\Programming Projects\Googletest\gtest-1.7.0\src\gtest_main.cc" />
+    <ClCompile Include="..\..\..\..\Programming Projects\Googletest\gtest-1.7.0\src\gtest-all.cc" />
+    <ClCompile Include="..\..\..\..\Programming Projects\Googletest\gtest-1.7.0\src\gtest_main.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
