--- a/MasterThesis/RePair_v2/RePair_v2.vcxproj
+++ b/MasterThesis/RePair_v2/RePair_v2.vcxproj
@@ -19,13 +19,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>Intel C++ Compiler XE 15.0</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>Intel C++ Compiler XE 15.0</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -81,6 +81,9 @@
   <ItemGroup>
     <ClInclude Include="Conditions.h" />
     <ClInclude Include="Initializer.h" />
+    <ClInclude Include="MyTest.h" />
+    <ClInclude Include="MyTimer.h" />
+    <ClInclude Include="Outputter.h" />
     <ClInclude Include="Pair.h" />
     <ClInclude Include="PairRecord.h" />
     <ClInclude Include="PairTracker.h" />
@@ -91,6 +94,9 @@
   <ItemGroup>
     <ClCompile Include="Conditions.cpp" />
     <ClCompile Include="Initializer.cpp" />
+    <ClCompile Include="MyTest.cpp" />
+    <ClCompile Include="MyTimer.cpp" />
+    <ClCompile Include="Outputter.cpp" />
     <ClCompile Include="Pair.cpp" />
     <ClCompile Include="PairRecord.cpp" />
     <ClCompile Include="PairTracker.cpp" />
