--- a/MasterThesis/googletest/googletest.vcxproj
+++ b/MasterThesis/googletest/googletest.vcxproj
@@ -40,7 +40,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\Nicolai\Documents\Programming Projects\Googletest\gtest-1.7.0\include;C:\Users\Nicolai\Documents\Programming Projects\Googletest\gtest-1.7.0;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Philip\Documents\Programmering\Googletest\gtest-1.7.0\include;C:\Users\Philip\Documents\Programmering\Googletest\gtest-1.7.0;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -78,8 +78,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Programming Projects\Googletest\gtest-1.7.0\src\gtest-all.cc" />
-    <ClCompile Include="..\..\..\..\Programming Projects\Googletest\gtest-1.7.0\src\gtest_main.cc" />
+    <ClCompile Include="..\..\..\..\Documents\Programmering\Googletest\gtest-1.7.0\src\gtest-all.cc" />
+    <ClCompile Include="..\..\..\..\Documents\Programmering\Googletest\gtest-1.7.0\src\gtest_main.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
