--- a/MasterThesis/googletest/googletest.vcxproj.filters
+++ b/MasterThesis/googletest/googletest.vcxproj.filters
@@ -18,10 +18,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Programming Projects\Googletest\gtest-1.7.0\src\gtest_main.cc">
+    <ClCompile Include="..\..\..\..\Documents\Programmering\Googletest\gtest-1.7.0\src\gtest_main.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\Programming Projects\Googletest\gtest-1.7.0\src\gtest-all.cc">
+    <ClCompile Include="..\..\..\..\Documents\Programmering\Googletest\gtest-1.7.0\src\gtest-all.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
