--- a/MasterThesis/unittest_RePair_v2/unittest_RePair_v2.vcxproj
+++ b/MasterThesis/unittest_RePair_v2/unittest_RePair_v2.vcxproj
@@ -53,7 +53,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Nicolai\Documents\Git_repos\NPCMaster\MasterThesis\;C:\Users\Nicolai\Documents\Programming Projects\Googletest\gtest-1.7.0\include;C:\Users\Nicolai\Documents\Programming Projects\Googletest\gtest-1.7.0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Philip\Desktop\Master\MasterThesis\;C:\Users\Philip\Documents\Programmering\Googletest\gtest-1.7.0\include;C:\Users\Philip\Documents\Programmering\Googletest\gtest-1.7.0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
