Started adding files for Huffman codes.

--- a/MasterThesis/RePair_v2/RePair_v2.vcxproj
+++ b/MasterThesis/RePair_v2/RePair_v2.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="AlgorithmP.h" />
     <ClInclude Include="Conditions.h" />
     <ClInclude Include="Huffman.h" />
+    <ClInclude Include="HuffmanNode.h" />
     <ClInclude Include="Initializer.h" />
     <ClInclude Include="MyTest.h" />
     <ClInclude Include="MyTimer.h" />
@@ -99,6 +100,7 @@
     <ClCompile Include="AlgorithmP.cpp" />
     <ClCompile Include="Conditions.cpp" />
     <ClCompile Include="Huffman.cpp" />
+    <ClCompile Include="HuffmanNode.cpp" />
     <ClCompile Include="Initializer.cpp" />
     <ClCompile Include="MyTest.cpp" />
     <ClCompile Include="MyTimer.cpp" />
