Added own test file, started major test of the diddy example.

--- a/MasterThesis/unittest_RePair_v2/unittest_RePair_v2.vcxproj
+++ b/MasterThesis/unittest_RePair_v2/unittest_RePair_v2.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="..\RePair_v2\PairTracker.cpp" />
     <ClCompile Include="..\RePair_v2\SymbolRecord.cpp" />
     <ClCompile Include="unittest_RePair_v2_AlgorithmP.cpp" />
+    <ClCompile Include="unittest_RePair_v2_AlgorithmP_Nicolai.cpp" />
     <ClCompile Include="unittest_RePair_v2_Initializer.cpp" />
   </ItemGroup>
   <ItemGroup>
