debug for large file of duplicate letters works

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Re-Pair_Compression_techniques.zip
 MasterThesis/unittest_RePair_v2/unittest_RePair_v2.vcxproj
 MasterThesis/googletest/googletest.vcxproj
 MasterThesis/googletest/googletest.vcxproj.filters
+*.manifest
