Removed all the excessive dynamic allocation use, all tests still pass.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ MasterThesis/googletest/googletest.vcxproj.filters
 MasterThesis/unittest_RePair_v2/testWriteDictionary
 MasterThesis/unittest_RePair_v2/testHuffmanDictionary2
 MasterThesis/unittest_RePair_v2/testHuffmanDictionary
+MasterThesis/unittest_RePair_v2/testDuplicatesLongCompressed
