--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ MasterThesis/RePair_v2/RePair_v2.vcxproj
 MasterThesis/googletest/googletest.vcxproj
 MasterThesis/googletest/googletest.vcxproj.filters
 *.manifest
+*.NPC
+MasterThesis/unittest_RePair_v2/testWriteDictionary
