--- a/MasterThesis/unittest_RePair/unittest_RePair.vcxproj
+++ b/MasterThesis/unittest_RePair/unittest_RePair.vcxproj
@@ -53,7 +53,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Git-repos\NPCMaster\MasterThesis;D:\Documents\Programming Projects\Googletest\gtest-1.7.0\include;D:\Documents\Programming Projects\Googletest\gtest-1.7.0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Nicolai\Documents\Programming Projects\sparsehash-2.0.2\src;D:\Git-repos\NPCMaster\MasterThesis;D:\Documents\Programming Projects\Googletest\gtest-1.7.0\include;D:\Documents\Programming Projects\Googletest\gtest-1.7.0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
