Updated to dense hash in Philips new functions, everything works now, moving back to master.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ MasterThesis/unittest_RePair_v2/diddy.txt.dict.NPC
 *.NPC
 *.orig
 MasterThesis/unittest_RePair_v2/testWriteDictionaryDiddy
+*.decoded
