Trying to fix the issue of increasing time used on outputting.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ MasterThesis/unittest_RePair_v2/diddy.txt.dict.NPC
 *.orig
 MasterThesis/unittest_RePair_v2/testWriteDictionaryDiddy
 *.decoded
+*.test
