--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ MasterThesis/unittest_RePair_v2/diddy.txt.dict.NPC
 MasterThesis/unittest_RePair_v2/testWriteDictionaryDiddy
 *.decoded
 *.test
+MasterThesis/RePair_v2/My Advisor XE Results - RePair_v2/
+MasterThesis/lib/boost_1_57_0/
