Forced to ignore unit test

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ MasterThesis/unittest_RePair_v2/testWriteDictionaryDiddy
 *.test
 MasterThesis/RePair_v2/My Advisor XE Results - RePair_v2/
 MasterThesis/lib/boost_1_57_0/
+MasterThesis/unittest_RePair_v2/unittest_RePair_v2_Decoder.cpp
