Debugging errors encountered in dna50mb file

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ MasterThesis/unittest_RePair_v2/testWriteDictionaryDiddy
 MasterThesis/RePair_v2/My Advisor XE Results - RePair_v2/
 MasterThesis/lib/boost_1_57_0/
 MasterThesis/unittest_RePair_v2/unittest_RePair_v2_Decoder_Nicolai_old.cpp
+MasterThesis/unittest_RePair_v2/TestPairs
