Almost done analyzing memory during compression.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ MasterThesis/unittest_RePair_v2/TestPairs
 MasterThesis/RePair_v2/Debug/RePair_v2.res
 *.rc
 *.res
+MasterThesis/RePair_v2/Debug/RCa09752
+MasterThesis/RePair_v2/Debug/RCa09148
+MasterThesis/RePair_v2/Debug/RCa08436
+MasterThesis/RePair_v2/Debug/RCa06288
+MasterThesis/RePair_v2/Debug/RCa01560
+MasterThesis/RePair_v2/TestData.csv
