--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ MasterThesis/RePair_v2/Release/RCa04956
 MasterThesis/RePair_v2/Release/RCa07280
 MasterThesis/RePair_v2/Release/RCa11884
 *.csv
+MasterThesis/RePair_v2/resource.h
